--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@
 
 [context.production.environment]
   HUGO_ENV = "production"
+  WC_POST_CSS = "true"
 
 [context.deploy-preview]
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
