--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0"
   }
 }
