--- a/data/wowchemy_cms_tpl.yaml
+++ b/data/wowchemy_cms_tpl.yaml
@@ -9,7 +9,7 @@ collections:
     label: Posts
     label_singular: Post
     folder: 'content/post'
-    path: '{{slug}}/index'
+    path: '{{year}}-{{month}}-{{day}}_{{slug}}/index'
     filter: {field: "cms_exclude"}
     create: true  # Allow users to create new documents in this collection
     fields:  # The fields each document in this collection have
