--- a/data/wowchemy_cms_tpl.yaml
+++ b/data/wowchemy_cms_tpl.yaml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: main
   squash_merges: true
-# media_folder: 'assets/media'
-# public_folder: '/media'
+media_folder: 'assets/media'
+public_folder: '/media'
 collections:
   - name: posts
     label: Posts
