--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,15 +27,12 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Set up Ruby 2.6
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
-
-      - name: Install dependencies
-        run: gem install html-proofer
-
       - name: Proof HTML 📚
         run: |
           hugo --minify -v -b https://example.com/
-          htmlproofer public --check-html --allow-hash-href --empty-alt-ignore --disable-external --ignore-empty-mailto
+
+      - name: Check HTML
+        uses: chabad360/htmlproofer@master
+        with:
+          directory: "./public"
+          arguments: --allow-hash-href --empty-alt-ignore --disable-external --ignore-empty-mailto
