--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Proof HTML 📚
-        run: |
-          hugo --minify -v -b https://example.com/
+        run: hugo --minify -v -b https://example.com/
 
       - name: Check HTML
         uses: chabad360/htmlproofer@master
         with:
           directory: "./public"
-          arguments: --allow-hash-href --empty-alt-ignore --disable-external --ignore-empty-mailto
+          arguments: --allow-hash-href --ignore-empty-alt --disable-external --ignore-empty-mailto
