--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,4 @@ jobs:
         uses: chabad360/htmlproofer@master
         with:
           directory: "./public"
-          arguments: --allow-hash-href --ignore-empty-alt --disable-external --ignore-empty-mailto
+          arguments: --allow-hash-href=true --ignore-empty-alt=true --disable-external=true --ignore-empty-mailto=true
