posts: update to instagram

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
       "polebridge",
       "Redington",
       "ribeye's",
+      "shoginn",
       "Shoooot",
       "Skwalla",
       "sowbugs",
