--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     }
   },
   "scripts": {
+    "build": "rimraf ./public ./resources ./_vendor",
+    "start:dev": "npm run build && hugo server --gc",
+    "prod": "npm run build && hugo --gc --minify",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -58,6 +61,7 @@
       "clarkforkriver",
       "deadsville",
       "dumbass",
+      "Flyfishing",
       "Josephy",
       "Kev's",
       "Lavoy",
@@ -90,7 +94,9 @@
     "html-validate-markdown": "^3.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "run-script-os": "^1.1.6"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
