--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -81,12 +81,12 @@ features:
     commento:
       url: ""
   search:
-    provider: "algolia"
+    provider: "wowchemy"
     algolia:
-      app_id: "Y77NSTCR95"
-      api_key: "4f19074ff38d0915f53df421e0241734"
-      index_name: "webpage"
-      show_logo: true
+      app_id: ""
+      api_key: ""
+      index_name: ""
+      show_logo: false
   map:
     provider: ""
     api_key: ""
