--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,12 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/"
+    commit-message:
+      prefix: "fix"
+    rebase-strategy: "auto"
+    schedule:
+      interval: "daily"
+    allow:
+      - dependency-name: "release-please"
