--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "scripts": {
     "build": "rimraf ./public ./resources ./_vendor",
-    "start:dev": "npm run build && hugo server --gc",
-    "prod": "npm run build && hugo --gc --minify",
+    "clean:hugo": "rimraf hugo{.log,_stats.json} resources public assets/jsconfig.json .hugo_build.lock",
+    "serve": "run-p serve:hugo",
+    "serve:hugo": "bin/server/run.sh",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -94,6 +95,7 @@
     "html-validate-markdown": "^3.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6"
