--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install",
     "precommit": "lint-staged",
     "_start:_hugo": "./shoginn_scripts/bin/build/hugo.sh",
-    "build:hugo": "cross-env SHOGINN_SCRIPTS_BUILD_HUGO=1 run-s clean:hugo _start:_hugo"
+    "build:hugo": "cross-env SHOGINN_SCRIPTS_BUILD_HUGO=1 run-s clean:hugo _start:_hugo",
+    "update_deps": "npx npm-check-updates"
   },
   "husky": {
     "hooks": {
@@ -24,19 +25,20 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "cspell": "^6.18.0",
-    "html-validate": "^7.11.1",
+    "cspell": "^6.26.1",
+    "html-validate": "^7.13.2",
     "html-validate-markdown": "^3.0.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
+    "npm-check-updates": "^16.7.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.1",
-    "rimraf": "^3.0.2",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.2",
     "run-script-os": "^1.1.6"
   },
   "cspell": {
